# SysDeskNotifD

./: LICENSE  README.md  pyproject.toml
src/mirfatif/sys_desk_notifd/: notify_deskd.py  sys_desk_notifd.py
src/mirfatif/sys_desk_notifd/etc/systemd/user/: sys_desk_notifd.service
